# Vortexartec-ai-art-gen-web3-engine

./: .gitignore  ACTIVATION-TEST.php  ACTIVITY-LOGGING-GUIDE.md  AUDIT-PIPELINE-FIXES-SUMMARY.md  COMPREHENSIVE-AUDIT-SUMMARY.md  COMPREHENSIVE-PRE-DEPLOYMENT-AUDIT.md  COMPREHENSIVE-SECURITY-GITHUB-FIXES-SUMMARY.md  DEBUG-GUIDE.md  DEBUG-SOLUTION-SUMMARY.md  DEPLOYMENT-CHECKLIST.md  DEPLOYMENT-READY.md  DEPLOYMENT-SUCCESS-SUMMARY.md  DEPLOYMENT-SUMMARY-REPORT.md  DEPLOYMENT-SUMMARY.md  DEPLOYMENT-VERIFICATION.php  DEPLOYMENT-WORKFLOW.md  END-TO-END-RECURSIVE-SYSTEM-SUMMARY.md  ENHANCED-ERROR-CORRECTION-SUMMARY.md  FINAL-AUDIT-CONFIRMATION.md  FINAL-DEPLOYMENT-COMPLETE.md  FINAL-DEPLOYMENT-SUMMARY.md  FINAL-STATUS-REPORT.md  FIX-DEPLOYMENT-SUMMARY.md  FIX-WP-CONFIG.php  FUNCTIONS-PHP-AUDIT-REPORT.md  FUNCTIONS-PHP-IMPLEMENTATION-GUIDE.md  GITHUB-ACTIONS-DEPRECATION-FIX.md  GITHUB-ACTIONS-FIX-REPORT.json  GITHUB-ACTIONS-FIX-REPORT.md  GITHUB-ACTIONS-WORKFLOW.yml  GITHUB-DEPLOYMENT-COMPLETE.md  GITHUB-RELEASE-READY-SUMMARY.md  GITHUB-REPOSITORY-SETUP-GUIDE.md  GITHUB-SECURITY-STRATEGY.md  GITHUB-SETUP-GUIDE.md  IMPLEMENTATION-SUMMARY.md  INVESTOR-REPOSITORY-AUDIT-REPORT.md  INVESTOR-REPOSITORY-CLEANUP-PLAN.md  INVESTOR-REPOSITORY-NEW-STRUCTURE.md  INVESTOR-REPOSITORY-UPDATE-EXECUTIVE-SUMMARY.md  (+81 more)
admin/: class-vortex-activity-monitor.php  class-vortex-ai-marketplace-admin.php  class-vortex-artist-journey-dashboard.php  class-vortex-log-admin.php
infra/: main.tf  (+4 more)
solana-program/programs/tola_masterpiece/: Cargo.toml
solana-program/programs/tola_masterpiece/src/: lib.rs
(+417 files in other folders)
