[package]
name = "tola_masterpiece"
version = "1.0.0"
description = "TOLA NFT Royalty Contract for VORTEX AI Engine"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "tola_masterpiece"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = "1.13.2"
solana-program = "1.16.0"
spl-token = "3.5.0"
spl-associated-token-account = "1.1.3"
borsh = "0.10.3"
arrayref = "0.3.6" 